[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Events/Level 1 Events.gd" type="Script" id=1]

[node name="Level 1 Events" type="Node2D"]
script = ExtResource( 1 )

[node name="Initial" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Move_Cam" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Initial" to="." method="_on_Initial_timeout"]
[connection signal="timeout" from="Move_Cam" to="." method="_on_Move_Cam_timeout"]
